@@ -23,7 +23,7 @@ interface IContentManager : nsISupports
   boolean setBookIndex(in ACString id, in AString path, in ACString indexType);
   boolean setBookPath(in ACString id, in AString path);
   boolean updateBookLastOpenDateById(in ACString id);
-  boolean listBooks(in ACString mode, in ACString sortBy, in PRUint32 maxSize, in ACString language, in ACString publisher);
+  boolean listBooks(in ACString mode, in ACString sortBy, in PRUint32 maxSize, in ACString language, in ACString publisher, in ACString search);
   boolean getBookCount(in PRBool localBooks, in PRBool remoteBooks, out PRUint32 count);
   boolean getBooksLanguages(out AUTF8String languages);
   boolean getBooksPublishers(out AUTF8String publishers);
